2009-10-01  Stefano Lattarini  <stefano.lattarini@gmail.com>  (tiny change)

	Fix recommended way to run automake's test scripts with Zsh.
	* tests/README (Supported shells): Changed the recommended way
	to run automake's test scripts with Zsh.  Now we tell to use
	the Zsh's command line option `-o no_function_argzero', not
	`--no-function-argzero', since the latter does not work with
	versions 3.x of Zsh.

2009-09-18  Peter Johansson  <trojkan@gmail.com>  (tiny change)

	Fix link to "Recursive Make Considered Harmful" paper.
	* doc/automake.texi (Alternative): Fix broken URL.

2009-09-11  Reuben Thomas <rrt@sc3d.org>  (tiny patch)

	Fix outdated reference to sh-utils in the manual.
	* doc/automake.texi (Options): The reference to `sh-utils'
	should be to `coreutils'.

2009-09-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid sleeping for one second most of the time in sanity check.
	* m4/sanity.m4 (AM_SANITY_CHECK): Try sanity check first without
	sleeping for a second, and only if that failed, sleep and try
	again, to avoid the delay in the common case of a configure
	script that is older than a second, or a system with sub-second
	time stamp granularity.
	Report and different patch by Jim Meyering.

2009-09-06  Stefano Lattarini  <stefano.lattarini@gmail.com>  (tiny change)

	tests/README: warn about zsh incompatibilities.
	* tests/README (User interface, Getting details from failures):
	Explicitly state that every test is a "shell script", not just
	a "script", and that it's run by `/bin/sh' by default.
	* tests/README (User interface, Supported shells): New subsection,
	telling about expected portability of the automake test scripts,
	describing a zsh incompatibility (w.r.t. $0), and a workaround to
	it (with the `--no-function-argzero' option).

	testsuite: fix a minor glitch.
	* tests/defs.in (exit trap): Use `$me', not `$as_me', as the
	name of the current test (used in error messages).
	* THANKS: Update.

2009-07-08  Jim Meyering  <meyering@redhat.com>